<resources>
    <string name="app_name">GroupSMSender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">title_home</string>
    <string name="URL">URL</string>
    <string name="title_notifications">URL and MSG</string>
    <string name="Settings">Settings</string>
    <string name="url_hint">Enter URL</string>
    <string name="msg_hint">Enter message</string>
    <string name="send_button">Send Messages</string>
    <string name="counter_text">%1$d - Letters</string>
    <string name="save_settings">Save Settings</string>
    <string name="token">Token:</string>
    <string name="url_instruction">The format on the page should be like: number:msg,number:msg. \nNumbers and messages are separated by commas. \nFor example: 050...05531:Hello,0521615..02:Hi</string>
    <string name="url_msg_instruction">The format on the page should be like: number,number. \nNumbers are separated by commas. \nFor example: 050...05531,0521615..02</string>
    <string name="token_explanation">A token is a unique identifier that authenticates a user for API interactions. \nIt\'s usually generated by the server after successful login. \nPlease enter your token below:</string>
    <string name="send_messages">Send Messages</string>
    <string name="http">http://</string>
    <!--    <string-array name="languages">-->
<!--        <item>select lang.</item>-->
<!--        <item>English</item>-->
<!--        <item>עברית</item>-->
<!--    </string-array>-->
</resources>