<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tokenExplanationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token_explanation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/tokenEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Token.."
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_settings" />
</LinearLayout>
